# claude-auth-proxy

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  docker.yml
claude-auth-providers/: Cargo.toml
claude-auth-providers/src/: env_var.rs  lib.rs
claude-auth-providers/src/claude_code/: credential.rs  credentials_file.rs  keychain.rs  mod.rs  refresh.rs
claude-auth-transform/: Cargo.toml
claude-auth-transform/src/: betas.rs  bodies.rs  config.rs  error.rs  lib.rs  response.rs  signing.rs  tool_names.rs  transforms.rs
src/: config.rs  error.rs  main.rs
src/install/: error.rs  mod.rs
tests/: integration_proxy_smoke.py
tests/claude/: haiku-simple.hurl  haiku-streaming.hurl  haiku-thinking-streaming.hurl  haiku-thinking.hurl  haiku-tool.hurl  opus-simple.hurl  opus-streaming.hurl  opus-thinking-streaming.hurl  opus-thinking.hurl  opus-tool.hurl  sonnet-simple.hurl  sonnet-streaming.hurl  sonnet-thinking-streaming.hurl  sonnet-thinking.hurl  sonnet-tool.hurl
tests/fail/: fail1-upstream.hurl  fail1.hurl
tests/hurl/: health.hurl  messages_count_tokens.hurl  messages_create.hurl  models_list.hurl  models_retrieve.hurl
