[workspace]
resolver = "3"
members = [
    ".", "claude-auth-providers",
    "claude-auth-transform"
]

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
significant_drop_tightening = "allow"

[lints]
workspace = true

[package]
name = "claude-auth-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
claude-auth-providers = { version = "0.1.0", path = "claude-auth-providers" }
claude-auth-transform = { version = "0.1.0", path = "claude-auth-transform" }
http = "1.4.0"
http-body-util = "0.1.3"
reqwest = { version = "0.13.2", features = ["stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.51.1", features = ["rt", "rt-multi-thread", "macros", "signal"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
which = "8"
