[lints]
workspace = true

[package]
name = "claude-auth-providers"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tracing = "0.1.44"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"
security-framework = "3.7.0"
security-framework-sys = "2.17.0"
