[lints]
workspace = true

[package]
name = "claude-auth-providers"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.51.1", features = ["process"] }
tracing = "0.1.44"
urlencoding = "2.1.3"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"
security-framework = "3.7.0"
security-framework-sys = "2.17.0"
