[lints]
workspace = true

[package]
name = "claude-auth-transform"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
bimap = "0.6.3"
bytes = "1.11.1"
hex = "0.4.3"
http = "1.4.0"
http-body = "1.0.1"
pin-project = "1.1.11"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
thiserror = "2.0.18"
tracing = "0.1.44"
uuid = { version = "1.23.0", features = ["v4"] }

[dev-dependencies]
http-body-util = "0.1.3"
tokio = { version = "1.51.1", features = ["macros", "rt"] }
